@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2015-2024 Kevin B. Hendricks, Stratford Ontario Canada
+**  Copyright (C) 2015-2025 Kevin B. Hendricks, Stratford Ontario Canada
 **  Copyright (C) 2009-2011 Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
 **  This file is part of Sigil.
@@ -482,6 +482,8 @@ private:
     QList <Resource *> ValidSelectedResources(Resource::ResourceType resource_type);
 
     QList <Resource *> ValidSelectedResourcesByMT(QStringList &mts);
+
+    bool IsCongruent(Resource::ResourceType selected_type, Resource::ResourceType candidate_type);
 
     void RefreshCounts();
 
